# stir

./: .gitignore  Cargo.toml  README.md  SYNTAX.md
.github/workflows/: build_and_test.yml  build_tests.yml
src/: lib.rs  main.rs
src/blocks/: basic_block.rs  boolean.rs  call.rs  critical.rs  function.rs  if_else.rs  loop.rs  mod.rs  number.rs  primitive.rs  static_str.rs  str.rs
src/label/: mod.rs
src/llvm/: error.rs  mod.rs
src/recipe/: mod.rs
