[package]
name = "stir"
version = "0.0.2"
authors = ["cohenarthur <arthur.cohen@epita.fr>"]
edition = "2018"
description = "Small Threaded Intermediate Representation"
license-file = "LICENSE.md"
keywords = ["ir", "llvm"]
readme = "README.md"
repository = "https://github.com/cohenarthur/stir"

[lib]
name = "stir"
path = "src/lib.rs"

[[bin]]
name = "stir-bin"
path = "src/main.rs"

[dependencies]
